<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_screen_bg"
    tools:context=".Start_Screen_Activity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="520dp"
        android:fontFamily="@font/lexend_bold"
        android:text="@string/start_screen_text1"
        android:textColor="@color/matiria_C_Mid_Greeen"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="304dp"
        android:layout_height="112dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/lexend_bold"
        android:text="@string/start_screen_text2"
        android:textAlignment="textStart"
        android:textColor="@color/matiria_C_lignt"
        android:textSize="90sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/lexend_tera_thin"
        android:text="@string/start_screen_text3"
        android:textColor="@color/matiria_C_Mid_Greeen"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/add_profile_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_profile_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="38dp"
        android:fontFamily="@font/lexend_bold"
        android:paddingTop="10dp"
        android:paddingBottom="12dp"
        android:text="@string/start_screen_text4"
        android:textAlignment="center"
        android:textColor="@color/matiria_C_lignt"
        android:textSize="20sp"
        app:backgroundTint="@color/matiria_C_Mid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>