<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_bg"
    tools:context=".SignInActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".SignInActivity">

        <!-- ConstraintLayout as the only direct child of ScrollView -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Email Input -->

            <ProgressBar
                android:id="@+id/progressBar6"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/matiria_C_lignt"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/signup_nav_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.878" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:fontFamily="@font/lexend_bold"
                android:text="@string/signin_screen_text1"
                android:textColor="@color/matiria_C_lignt"
                android:textSize="38sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="230dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/matiria_C_text"
                app:boxCollapsedPaddingTop="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                app:boxStrokeWidth="2dp"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/matiria_C_lignt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textView8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signin_screen_text2"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="@color/matiria_C_text"
                app:boxCollapsedPaddingTop="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"

                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                app:boxStrokeWidth="2dp"
                app:endIconMode="password_toggle"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/matiria_C_lignt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signin_screen_text3"
                    android:inputType="textPassword"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Sign In Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/lexend_bold"
                android:paddingTop="10dp"
                android:paddingBottom="12dp"
                android:text="@string/signin_screen_text7"
                android:textAlignment="center"
                android:textColor="@color/matiria_C_lignt"
                android:textSize="20sp"
                app:backgroundTint="@color/matiria_C_Secondry_Btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgetPassword_btn" />

            <!-- Forget Password Button -->

            <!-- Sign Up Navigation Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_nav_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="125dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/signin_screen_text5"
                android:textColor="@color/matiria_C_text"
                android:textSize="14sp"
                app:backgroundTint="@android:color/transparent"
                app:icon="@drawable/next_page"
                app:iconGravity="textEnd"
                app:iconPadding="8dp"
                app:iconSize="24dp"
                app:iconTint="@color/matiria_C_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:strokeColor="@color/matiria_C_text"
                app:strokeWidth="0.7dp" />

            <TextView
                android:id="@+id/forgetPassword_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="17dp"
                android:text="@string/signin_screen_text4"
                android:textColor="@color/matiria_C_Mid_Greeen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
